--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
       run: go get .
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v -o dailyalu-server ./main.go
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
