update go.yml to add env path and update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,10 @@ REDIS_DB=0
 AWS_REGION=ap-southeast-1
 AWS_S3_BUCKET=dailyalu-storage
 AWS_SES_SENDER=no-reply@dailyalu.com
+
+# Add these to your existing .env.example
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USERNAME=your-brevo-username
+SMTP_PASSWORD=your-brevo-password
+SMTP_FROM=noreply@dailyalu.mom
